--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="text-center">
     <hr>
     <a href="https://mailchi.mp/c23a66a0f9ed/ztmstudents">
-    <button type="button" class="btn btn-primary btn-xl">Primary</button>
+    <button type="button" class="btn btn-primary btn-xl">Subscribe</button>
   </a>
   </section>
   </div>
